tests/compile-fail/invalid-count.stderr
error: Unable to infer parser for 'Count' attribute. Is item type a Vec ?
  --> $DIR/invalid-count.rs:10:8
   |
10 |     a: u32,
   |        ^^^
